[package]
name = "systemd-linter"
description = "A SystemD unit files linter"
version = "0.1.4"
authors = ["Thomas Wickham <twickham@octo.com>"]
license = "MPL-2.0"

[dependencies]
systemd-parser = { version = "^0.1", path = "./crates/systemd-parser" }
clap = "^2.20"
colored = "^1.0"
rustc-serialize = "^0.3"
clippy = {version = "*", optional = true}

[features]
default = []

